--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -14,6 +14,12 @@
     /*
     * primary color
     */
+    --color-secondary: 0, 204, 254;
+
+
+    /*
+    * primary color
+    */
     --color-accent: 0, 51, 152;
 
     /*
