barectory latest updates

--- a/src/assets/css/custom-plugins.css
+++ b/src/assets/css/custom-plugins.css
@@ -701,3 +701,20 @@ body[dir='rtl'] .react-tel-input .country-list .flag {
 .header-modern-primary {
   background-color: rgb(var(--color-accent));
 }
+
+@media (min-width: 1280px) {
+  .swiper-category .swiper-wrapper {
+    display: flex;
+    justify-content: center !important;
+  }
+}
+
+.main-container {
+  margin-top: 25px;
+}
+
+@media (min-width: 1280px) {
+  .main-container {
+    margin-top: 125px;
+  }
+}
