Barectory Front-end Update

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -12,10 +12,15 @@
     */
 
     /*
-    * primary color
+    * secondary color
     */
     --color-secondary: 0, 204, 254;
 
+
+    /*
+    * primary color
+    */
+    --color-accent: 0, 51, 152;
 
     /*
     * primary color
